--- a/css/style.css
+++ b/css/style.css
@@ -7,13 +7,14 @@
 }
 
 body {
-  height:100vh;
-  background-color: #F9F5F3;
+  height: 100%;
+  background-color: #FDFDFD;
   background-image: url('../assets/wall.jpg');
   background-position: center;
   background-repeat: no-repeat;
   padding: 0 2em;
   font-family: 'Open Sans', sans-serif;
+  margin-bottom: 2em;
 }
 
 header{
@@ -137,9 +138,8 @@ article li {
 }
 
 footer {
-  position: fixed;
-  bottom: .2em;
-  right: 1em;
+  display: flex;
+  justify-content: flex-end;
 }
 
 footer small {
@@ -158,7 +158,10 @@ footer small {
   .group-experiences{
     grid-template-columns: 30% 30% 30%;
   }
+  .resume {
+    margin-bottom: 2em;
+  }
   .resume article {
-    max-width: 60vw;
+    max-width: 50vw;
   }
 }
